# jcim

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGNDECISIONS.md  LIMITATIONS.md  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release-readiness.yml
bundled-backends/: README.md
bundled-backends/simulator/: README.md  manifest.toml
bundled-backends/simulator/src/com/licel/globalplatform/: GpSimulatorRuntime.java
bundled-backends/simulator/src/jcim/backend/: SimulatorMain.java
crates/jcim-api/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
crates/jcim-api/proto/jcim/v0_2/: service.proto
crates/jcim-api/proto/jcim/v0_3/: service.proto
crates/jcim-api/src/: lib.rs
crates/jcim-api/tests/: descriptor_contract.rs  message_contract.rs
crates/jcim-app/: ARCHITECTURE.md  Cargo.toml  README.md
crates/jcim-app/src/: app.rs  card.rs  java_runtime.rs  lib.rs  model.rs  registry.rs
crates/jcim-app/src/app/: builds.rs  events.rs  projects.rs  selectors.rs  system.rs  testsupport.rs
crates/jcim-app/src/app/cards/: gp.rs  inventory.rs  iso.rs  mod.rs  raw.rs
crates/jcim-app/src/app/simulations/: mod.rs  query.rs
crates/jcim-app/src/app/simulations/runtime/: control.rs  events.rs  mod.rs  session.rs  startup.rs
crates/jcim-app/src/app/state/: build_events.rs  card_sessions.rs  config.rs  mod.rs  registry.rs  simulations.rs  store.rs
crates/jcim-app/src/card/: adapter.rs  gp_keyset.rs  helper_tool.rs  inventory_parser.rs  java_adapter.rs
crates/jcim-app/src/card/mock_adapter/: adapter.rs  dispatch.rs  globalplatform.rs  inventory.rs  iso.rs  mod.rs  state.rs  tests.rs
crates/jcim-app/tests/: characterization.rs
crates/jcim-backends/: ARCHITECTURE.md  Cargo.toml  README.md
crates/jcim-backends/src/: backend.rs  lib.rs  prelude.rs
crates/jcim-backends/src/backend/: actor.rs  external.rs  handle.rs  manifest.rs  reply.rs  tests.rs
crates/jcim-backends/tests/: public_surface.rs
crates/jcim-build/: ARCHITECTURE.md  Cargo.toml  README.md
crates/jcim-build/src/: build.rs  lib.rs
crates/jcim-build/tests/: public_surface.rs
crates/jcim-cap/: ARCHITECTURE.md  Cargo.toml  README.md
crates/jcim-cap/src/: cap.rs  export.rs  lib.rs  prelude.rs
crates/jcim-cap/src/cap/: archive.rs  components.rs  error.rs  mod.rs  parser.rs  tests.rs  types.rs  validation.rs
crates/jcim-cap/tests/: public_surface.rs
crates/jcim-cli/: ARCHITECTURE.md  Cargo.toml  README.md
crates/jcim-cli/src/: cli.rs  main.rs
crates/jcim-cli/src/cli/: args.rs  dispatch.rs  error.rs  mod.rs  runtime.rs
crates/jcim-cli/src/cli/dispatch/: build.rs  card.rs  helpers.rs  project.rs  sim.rs  system.rs
crates/jcim-cli/src/cli/output/: human.rs  json.rs  mod.rs  render.rs
crates/jcim-cli/tests/: docs_smoke.rs  json_contract.rs
crates/jcim-cli/tests/json_contract/: basics.rs  card_surface.rs  managed_surface.rs  mod.rs  support.rs
crates/jcim-config/: ARCHITECTURE.md  Cargo.toml  README.md
crates/jcim-config/src/: config.rs  lib.rs  managed_files.rs  prelude.rs  project.rs
crates/jcim-config/src/project/: manifest.rs  paths.rs  runtime.rs  user.rs
crates/jcim-config/tests/: public_surface.rs  third_party_governance.rs
crates/jcim-core/: ARCHITECTURE.md  Cargo.toml  README.md
crates/jcim-core/examples/: show_profiles.rs
crates/jcim-core/src/: aid.rs  apdu.rs  error.rs  globalplatform.rs  iso7816.rs  lib.rs  model.rs  prelude.rs
crates/jcim-core/src/globalplatform/: commands.rs  lifecycle.rs  mod.rs  parsers.rs  secure_channel.rs  status.rs  tests.rs
crates/jcim-core/src/iso7816/: atr.rs  mod.rs  secure_messaging.rs  selection.rs  session.rs  status_word.rs  tests.rs
crates/jcim-core/src/iso7816/commands/: builders.rs  classification.rs  constants.rs  decoded.rs  mod.rs
crates/jcim-core/src/model/: backend.rs  install.rs  profile.rs  protocol.rs  tests.rs
crates/jcim-core/tests/: public_surface.rs
crates/jcim-sdk/: ARCHITECTURE.md  Cargo.toml  README.md
crates/jcim-sdk/examples/: satochip_lifecycle.rs  satochip_wallet.rs
crates/jcim-sdk/examples/support/: satochip.rs
crates/jcim-sdk/src/: client.rs  connection.rs  error.rs  lib.rs  types.rs
crates/jcim-sdk/src/client/: bootstrap.rs  build.rs  cards.rs  handle.rs  mod.rs  projects.rs  proto.rs  simulations.rs  system.rs  workspace.rs
crates/jcim-sdk/src/client/proto/: apdu.rs  gp.rs  iso.rs  selectors.rs  service.rs  summaries.rs
crates/jcim-sdk/tests/: docs_examples.rs  hardware_card.rs  lifecycle.rs
crates/jcim-sdk/tests/lifecycle/: card_workflows.rs  daemon_bootstrap.rs  mod.rs  simulation_workflows.rs  support.rs
crates/jcimd/: ARCHITECTURE.md  Cargo.toml  README.md
crates/jcimd/src/: blocking.rs  lib.rs  main.rs  server.rs  translate.rs
crates/jcimd/src/rpc/: build.rs  card.rs  local.rs  mod.rs  project.rs  simulator.rs  system.rs  testsupport.rs  workspace.rs
crates/jcimd/src/translate/: apdu.rs  card.rs  iso.rs  project.rs  selectors.rs  status.rs
crates/jcimd/tests/: binary_smoke.rs  rpc_validation.rs  runtime_cleanup.rs  service_smoke.rs  simulator_service.rs
docs/: api-reference.md  architecture-overview.md  cli-reference.md  improvement-roadmap.md  manifest-reference.md  migration-0.3.md  publish-review.md  release-versioning.md  system-setup.md  third-party-refresh.md  troubleshooting-daemon.md
docs/adr/: 0001-workspace-layering.md  0002-backend-actor-model.md  0003-pcsc-unsafe-boundary.md  0004-compatibility-facades.md  0006-service-first-redesign.md  0007-public-contract-baseline.md  0008-managed-paths-runtime-ownership.md  0009-app-state-store-ownership.md  README.md
examples/satochip/: README.md
examples/satochip/workdir/: .gitignore  jcim.toml
tests/support/: integration_runtime.rs  socket.rs
