[workspace]
members = [
    "crates/jcim-core",
    "crates/jcim-config",
    "crates/jcim-build",
    "crates/jcim-cap",
    "crates/jcim-backends",
    "crates/jcim-api",
    "crates/jcim-app",
    "crates/jcim-sdk",
    "crates/jcimd",
    "crates/jcim-cli",
]
default-members = [
    "crates/jcim-core",
    "crates/jcim-config",
    "crates/jcim-build",
    "crates/jcim-cap",
    "crates/jcim-backends",
    "crates/jcim-api",
    "crates/jcim-app",
    "crates/jcim-sdk",
    "crates/jcimd",
    "crates/jcim-cli",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"

[workspace.dependencies]
aes = "0.8.4"
async-trait = "0.1.89"
cbc = "0.1.2"
clap = { version = "4.5.40", features = ["derive"] }
flate2 = "1.1.9"
hex = "0.4.3"
hmac = "0.12.1"
libc = "0.2.177"
once_cell = "1.21.3"
rand = "0.8.5"
secp256k1 = "0.31.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
toml = "0.8.23"
tonic = { version = "0.12.3", features = ["transport"] }
tonic-build = "0.12.3"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
prost = "0.13.4"
prost-types = "0.13.4"
