[package]
name = "jcim-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Local gRPC API contract for JCIM 0.3"
readme = "README.md"

[lints]
workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true

[dev-dependencies]
prost-types.workspace = true

[build-dependencies]
tonic-build.workspace = true
