[package]
name = "jcim-app"
version.workspace = true
edition.workspace = true
description = "Transport-neutral application core for JCIM 0.2"
readme = "README.md"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
hex.workspace = true
jcim-backends = { path = "../jcim-backends" }
jcim-build = { path = "../jcim-build" }
jcim-cap = { path = "../jcim-cap" }
jcim-config = { path = "../jcim-config" }
jcim-core = { path = "../jcim-core" }
serde.workspace = true
sha1.workspace = true
tokio.workspace = true
toml.workspace = true
