[package]
name = "jcim-cli"
version.workspace = true
edition.workspace = true
description = "Task-oriented CLI for JCIM 0.2"
readme = "README.md"

[lints]
workspace = true

[dependencies]
clap.workspace = true
hex.workspace = true
jcim-config = { path = "../jcim-config" }
jcim-core = { path = "../jcim-core" }
jcim-sdk = { path = "../jcim-sdk" }
serde_json.workspace = true
tokio.workspace = true
