[package]
name = "jcim-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Runtime configuration and profile resolution for JCIM"
readme = "README.md"

[lints]
workspace = true

[dependencies]
jcim-core = { path = "../jcim-core" }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
sha2.workspace = true
